2004-08-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Made automake version checks a loop
  - Check for automake-1.9
2004-08-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README:
  - Documented Debian package and Arjen Baart's RPM packages
  - Rewrote config stuff, referring to win32/INSTALL.txt
 win32/INSTALL.txt:
  - Took configuration header details out of the step-by-step list for brevity
  - Removed documentation about Visual C++ makefile being out of date
  - Documented new configuration system
2004-08-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Reinstated autoheader
 configitems:
  - New
  - Lists configuration items and where they should go
 configure.ac.in:
  - Generate only include/pqxx/config.h with automake
  - Generate partitioned config headers based on configitems
 include/pqxx/config-internal-autotools.h,
 include/pqxx/config-internal-compiler.h,
 include/pqxx/config-internal-libpq.h, include/pqxx/config-public-compiler.h,
 include/pqxx/config-public-libpq.h, include/pqxx/config.h,
 include/pqxx/config.h.in:
  - New
  - Automatically generated by configure script
  - Partition configuration items by public/private, and determining factor 
 include/pqxx/Makefile.am:
  - Added config.h
  - Added new partitioned config headers
 include/pqxx/compiler.h, include/pqxx/libcompiler.h, include/pqxx/util.hxx,
 test/test049.cxx:
  - Use partitioned config headers
 include/pqxx/internalconfig.h, include/pqxx/libconfig.h:
  - Removed
 Makefile.am:
  - Added configitems to distribution
2004-08-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Removed InvalidOid check
  - Removed <iterator> check
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Moved libpq into pqxx::internal::pq namespace
  - Removed unused status code argument to MakeEmpty()
 include/pqxx/largeobject.hxx, include/pqxx/transaction_base.hxx,
 include/pqxx/util.hxx, src/binarystring.cxx, src/largeobject.cxx,